--- a/pages/preset/main/index.wxml
+++ b/pages/preset/main/index.wxml
@@ -1,12 +1,4 @@
 <view class="main">
-    <custom-view-1 mini-class="mini-class-1"/>
-    <custom-view-2 mini-class="mini-class-2" custom-class="custom-class-2"/>
-    <custom-view-2 mini-class="mini-class-2" custom-class="custom-class-2" mini-name="customName"/>
-
-    <view class="added">
-        view data:{{miniIgnore}}
-    </view>
-    <view class="added">
-        pure data:{{_miniIgnore}}
-    </view>
+    <custom-view-1 demo-class="mini-class-1"/>
+    <custom-view-2 demo-class="mini-class-2" custom-class="custom-class-2"/>
 </view>
