--- a/pages/preset/custom-view-1/index.wxml
+++ b/pages/preset/custom-view-1/index.wxml
@@ -1,3 +1,6 @@
 <view class="mini-view mini-class">
     custom-view-1
+    <view>customName:{{customName}}</view>
+    <view>demoName:{{demoName}}</view>
+    <view>finalName:{{finalName}}</view>
 </view>
