--- a/pages/relation/view-2/child.wxml
+++ b/pages/relation/view-2/child.wxml
@@ -1,3 +1,4 @@
 <view class="v-child {{active ? 'active':''}}">
-    <text>this is child:{{childIndex}}:{{active}}</text>
+    <view>ChildView</view>
+    <view>{{text}}</view>
 </view>
