--- a/pages/relation/view-2/child.wxml
+++ b/pages/relation/view-2/child.wxml
@@ -1,4 +1,3 @@
 <view class="v-child {{active ? 'active':''}}">
-    <view>ChildView</view>
-    <view>{{text}}</view>
+    <text>ChildView：{{text}}</text>
 </view>
