--- a/pages/relation/view-1/child.wxml
+++ b/pages/relation/view-1/child.wxml
@@ -1,3 +1,3 @@
 <view class="v-child {{active ? 'active':''}}">
-    <text>this is child:{{text}}</text>
+    <text>ChildView:{{text}}</text>
 </view>
