--- a/pages/relation/main/index.wxml
+++ b/pages/relation/main/index.wxml
@@ -1,21 +1,21 @@
 <view>
     <view class="v-buttons">
-        <view class="v-button" bind:tap="onTapShowChild1">select child 1</view>
-        <view class="v-button" bind:tap="onTapShowChild2">select child 2</view>
+        <view class="v-button" bind:tap="onTapShowChild1">select 1</view>
+        <view class="v-button" bind:tap="onTapShowChild2">select 2</view>
     </view>
-    <parent-view mini-data="{{active}}">
-        <child-view/>
-        <child-view/>
+    <parent-view current="{{current}}">
+        <child-view current="1"/>
+        <child-view current="2"/>
     </parent-view>
 
     <view class="v-buttons">
-        <view class="v-button" bind:tap="onTap2" data-name="0">select 1</view>
-        <view class="v-button" bind:tap="onTap2" data-name="1">select 2</view>
-        <view class="v-button" bind:tap="onTap2" data-name="2">select 3</view>
+        <view class="v-button" bind:tap="onTap2" data-name="1">select 1</view>
+        <view class="v-button" bind:tap="onTap2" data-name="2">select 2</view>
+        <view class="v-button" bind:tap="onTap2" data-name="3">select 3</view>
     </view>
-    <parent-view-2 mini-data="{{active2}}">
-        <child-view-2/>
-        <child-view-2/>
-        <child-view-2/>
+    <parent-view-2 current2="{{current2}}">
+        <child-view-2 current="1"/>
+        <child-view-2 current="2"/>
+        <child-view-2 current="3"/>
     </parent-view-2>
 </view>
